syntax = "proto3";

package fr.rob.entities;

option java_outer_classname = "AccountProto";
option php_namespace = "Rob\\Protos";
option php_metadata_namespace = "Rob\\Protos\\Meta";

message Account {
  int32 id = 1;
  int32 user_id = 2;
  bool is_administrator = 3;
}
